Support ConfigMaps
Signed-off-by: Ron Moerman <ron@crazyelectron.io>